--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
     <link rel="stylesheet" type="text/css" href="../static/main.css" />
     <script src="./ASCIIMathML.js"></script>
 
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
 </head>
 <body>
