--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 <head>
+    <title>Math View</title>
     <link rel="stylesheet" type="text/css" href="../static/main.css" />
 
 <link rel="shortcut icon" href="/favicon.ico">
@@ -6,7 +7,7 @@
 </head>
 <body>
 <h1 class="wel">Welcome.</h1>
-<center><div id="d"><button id="b" class="btn1" onclick="click1()"></button><h3 id="p">Mode 1</h3></div></center>
+<div style="text-align: center;"><div id="d"><button id="b" class="btn1" onclick="click1()"></button><h3 id="p">Mode 1</h3></div></div>
 <a href="javascript:addRow()">
 <img src="../static/plus-ico.png" alt="add row" class="pls" />
 <h2 style="margin-left:50px;display: inline;top:25px;position:absolute;">Add new row</h2>
