--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,17 @@
 </head>
 <body>
 <h1 class="wel">Welcome.</h1>
-<div style="text-align: center;"><div id="d"><button id="b" class="btn1" onclick="click1()"></button><h3 id="p">Mode 1</h3></div></div>
+<div style="text-align: center;">
+    <div id="d">
+        <button id="b" class="btn1" onclick="click1()"></button>
+        <h3 id="p">Mode 1</h3>
+    </div>
+</div>
 <a href="javascript:addRow()">
 <img src="../static/plus-ico.png" alt="add row" class="pls" />
 <h2 style="margin-left:50px;display: inline;top:25px;position:absolute;">Add new row</h2>
 </a><br /><br /><br /><br />
-<div style="width: 75%;" id="inputs">
+<div style="width: 50%; transform: translateX(50%)" id="inputs">
 </div>
     <script src="../static/main.js"></script>
 </body>
