--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 <img src="../static/plus-ico.png" alt="add row" class="pls" />
 <h2 style="margin-left:50px;display: inline;top:25px;position:absolute;">Add new row</h2>
 </a><br /><br /><br /><br />
-<div style="width: 50%; transform: translateX(50%)" id="inputs">
+<div id="inputs">
 </div>
     <script src="../static/main.js"></script>
 </body>
